--- a/OEBPS/Text/c129.xhtml
+++ b/OEBPS/Text/c129.xhtml
@@ -11,215 +11,216 @@
 </head>
 
 <body>
-    <h1>129　暗殺事件</h1>
-    <p>　ダンジョン攻略の疲労によりグッスリと眠っていたメルセデスは、外から聞こえる怒鳴り声によって覚醒</p>させ<p>られた。</p>
-    <p>　もう夜かと思って窓の外を見ればまだ外は明るく、日が沈んでいない。</p>
-    <p>　一体どこの酔っ払いだ、こんな時間に騒いでいるのは。</p>
-    <p>　そう思いつつまだ眠い目を擦る。</p>
+    <h1>129.暗杀事件</h1>
+    <p>由于攻占地下城的疲劳而睡得香甜的梅赛德斯，被从外面传来的怒吼声所唤醒。</p>
+    <p>以为已经是晚上了，往窗外一看，外面还是亮堂堂的，太阳还没下山。</p>
+    <p>到底是哪里的醉鬼，在这个时间吵吵嚷嚷的。</p>
+    <p>这样想着还揉着惺忪的睡眼。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">あ、起きた？　外は何だか凄い事になってるわよ</span>”</p>
+    <p>“<span class="character">啊，起来了？外面好像变成了很厉害的事情。</span>”</p>
     <p></p>
     <p></p>
-    <p>　馬鹿グラシアンにテントを燃やされてしまった為に昨日から同じ宿に泊まっているレスリーが窓の外を見</p>なが<p>ら言う。</p>
-    <p>　窓と言っても所詮はダンジョン攻略が終わるまでしか使わない簡易住居なので、木の板で塞いだだけの簡</p>素な<p>ものだ。ガラスなんて贅沢なものは使っていない。</p>
-    <p>　木の板をどける事で外を見る事が出来る。</p>
-    <p>　メルセデスもレスリーと同じように窓に付いている木の板をどけて、外で騒いでいる人物を確認した。</p>
-    <p>　余談だが、吸血鬼の宿にエルフェがいる事で他の宿泊客から奇異の視線を集めてしまっているが、誰も文</p>句を<p>言わないのは近くにベンケイとクロがいるからだろう。</p>
+    <p>因为被笨蛋格拉西兰烧了帐篷，所以从昨天开始住在同一家旅馆的莱斯利一边看着窗外一边说道。</p>
+    <p>虽说是窗户，但毕竟是只在攻略完地牢之前才使用的简易住宅，所以只是用木板堵住的简单的东西。我没用玻璃之类的奢侈品。</p>
+    <p>通过搬开木板可以看到外面。</p>
+    <p>梅赛德斯也和莱斯利一样把窗户上的木板搬开，确认了在外面吵闹的人。</p>
+    <p>说点题外话，因为在吸血鬼的旅馆里有精灵，所以吸引了其他住宿客人的奇异视线，但是谁都不抱怨是因为附近有本凯和小黑吧。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">お前達が共謀してやった事じゃないだろうな！</span>”</p>
-    <p>“<span class="character">ふざけるな！　こっちも鳥公共に何人も殺られてるんだぞ！</span>”</p>
+    <p>“<span class="character">这不是你们共谋的事吧！</span>”</p>
+    <p>“<span class="character">别开玩笑了！我们也被鸟人杀了好几个人啊！</span>”</p>
     <p></p>
     <p></p>
-    <p>　騒いでいたのはエルフェと吸血鬼の双方であった。</p>
-    <p>　どうも、只事ならぬ事態らしい。</p>
-    <p>　まだどちらも武器を抜いていないが、今にも殺し合いが始まりそうなほどに空気が張り詰めているのが遠</p>くか<p>らでも分かる。</p>
-    <p>　騒ぎの中には、護衛に囲まれたジークリンデの姿も見えた。</p>
-    <p>　ダンジョンを誰が攻略したかの言い合い……にしては殺気立ちすぎている。</p>
-    <p>　もしかして攻略者を探して殺しでも起こってしまったのだろうか。</p>
-    <p>　実際そうなっても何もおかしくはない。</p>
-    <p>　ダンジョンとは軍事力そのものだ。いくつダンジョンを保有しているかが、そのまま国の力に直結する。</p>
-    <p>　それを得る為ならば……いや、最悪得られずとも相手に渡らない為ならば暗殺の一つや二つくらいするだけ</p>の<p>価値がある。</p>
-    <p>　適当に『こいつなんじゃないか』という奴を暗殺していき、それで運よく攻略者に当たれば少なくとも相</p>手の<p>国が急激に軍事力を増すという事態は避けられるのだ。</p>
-    <p>　一体何が起こっているのか……。</p>
-    <p>　事態を把握する為にメルセデスは視線を走らせ、こういう時に最も役立つ人物を発見した。</p>
+    <p>骚乱的是精灵和吸血鬼双方。</p>
+    <p>总觉得，好像不是什么大事。</p>
+    <p>虽然双方都还没有拔出武器，但从远处也可以看出，空气紧张得几乎要开始互相杀戮了。</p>
+    <p>在骚乱中，还看到了被警卫包围着的吉克林德。</p>
+    <p>谁攻占了地牢的争论……但太杀气了。</p>
+    <p>难道是为了寻找攻略者而杀人的吗。</p>
+    <p>实际上那样也不奇怪。</p>
+    <p>地牢就是军事力量本身。拥有多少地牢，直接关系到国家的力量。</p>
+    <p>如果是为了得到那个……不，最糟糕的是即使得不到也不能交给对方的话，那么就有一两个暗杀的价值。</p>
+    <p>适当暗杀一个叫做“这家伙不是吗”的家伙，这样运气好的话至少能避免对方国家急剧增加军事力量的情况。</p>
+    <p>到底发生了什么……。</p>
+    <p>为了把握事态的发展，梅赛德斯用视线注视着，发现了这个时候最有用的人物。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">ここで待っていろ。少し出かけて来る</span>”</p>
-    <p>“<span class="character">あっ、ちょっと！？</span>”</p>
+    <p>“<span class="character">在这里等一下。我出去一会儿。</span>”</p>
+    <p>“<span class="character">啊，等等！？</span>”</p>
     <p></p>
     <p></p>
-    <p>　レスリーを置いて窓から飛び降り、騒動が起こっている場所から少し離れた場所へ向かう。</p>
-    <p>　そこではハンナが忙しそうに部下に指示を出しており、メルセデスに気付くと手を止めた。</p>
+    <p>放下莱斯利从窗户跳下来，朝着离发生骚动的地方稍微远一点的地方走去。</p>
+    <p>在那里汉娜看起来很忙地向部下发出指示，一注意到梅赛德斯就停下了手。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">ハンナ、いいか？</span>”</p>
-    <p>“あ、メルちゃん。悪いけど今は忙し……いや、待って。</p>
-    <p>……やっぱメルちゃんも来て。多分メルちゃんにとっては他人事じゃないから”</p>
+    <p>“<span class="character">汉娜，有空吗？</span>”</p>
+    <p>“<span class="character">啊，梅尔。不好意思，现在很忙……不，等一下。</span></p>
+    <p><span class="character">……果然小梅也来了。可能对梅尔来说不是别人的事情</span>”</p>
     <p></p>
     <p></p>
-    <p>　ハンナはメルセデスの腕を掴み、それから一つの建物へと向かった。</p>
-    <p>　入口には彼女の部下と思われる吸血鬼が待機しており、ハンナを見ると敬礼をする。</p>
+    <p>汉娜抓住梅赛德斯的手臂，然后向一个建筑物走去。</p>
+    <p>门口有一个被认为是她的部下的吸血鬼在等着，看到汉娜就行了敬礼。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">誰も入れないで</span>”</p>
+    <p>“<span class="character">谁都不准进去</span>”</p>
     <p></p>
     <p></p>
-    <p>　ハンナは簡潔にそれだけを命じ、建物の扉を閉めた。</p>
-    <p>　それから奥に進むと、そこには吸血鬼と思われる遺体がいくつも並べられていた。</p>
-    <p>　遺体の状態はどれも酷いもので、あちこちが切り刻まれ……まるで拷問でも受けたようだ。</p>
+    <p>汉娜简洁地只命令了那个，关上了建筑物的门。</p>
+    <p>然后再往里走，发现那里摆放着几具被认为是吸血鬼的遗体。</p>
+    <p>尸体的状况全是可怕的，被上下砍断……仿佛受尽了折磨。</p>
     <p></p>
     <p></p>
-    <p>“右から順にアッペル子爵、そのお子さん、バシュ男爵、フレーミヒ子爵、ガル伯爵令息が三人。</p>
-    <p>一晩で七人殺られた。いずれもダンジョン攻略に名乗りを上げてた貴族だよ”</p>
-    <p>“<span class="character">エルフェの仕業か？</span>”</p>
-    <p>“いや……それがエルフェの方も同じように何人も殺られている。</p>
-    <p>しかも全部に目撃情報があってね……どうもフォーゲラの犯行みたいなんだよね”</p>
+    <p>“<span class="character">从右边开始，阿佩尔子爵、他的孩子巴什男爵、弗雷米希子爵和海鸥伯爵三人。</span></p>
+    <p><span class="character">一个晚上就被杀了七个人。他们都是自称攻占地下城的贵族</span>”</p>
+    <p>“<span class="character">是精灵干的吗？</span>”</p>
+    <p>“<span class="character">不……精灵也一样被杀了好几个人。</span></p>
+    <p><span class="character">而且全部都有目击情报呢……好像是鸟人的干的呢</span>”</p>
     <p></p>
     <p></p>
-    <p>　フォーゲラと聞き、メルセデスはなるほど、と考えた。</p>
-    <p>　確かにフォーゲラには動く理由がある。</p>
-    <p>　何故ならこの地にあったあのダンジョンは元々フォーゲラの物だ。</p>
-    <p>　ならば取り返そうと、攻略者を探しても不思議はない。</p>
-    <p>　そんな事をすれば吸血鬼やエルフェとの敵対待ったなしだが、それよりもダンジョンがない状態の方が遥</p>かに<p>不味いと考えたのだろう。</p>
-    <p>　少なくともフォーゲラには、これをやる理由がある。</p>
+    <p>听说是福格拉，梅赛德斯心想：原来如此。</p>
+    <p>确实，福格拉有行动的理由。</p>
+    <p>要说为什么的话，这片土地上的那个迷宫原本就是福格拉的。</p>
+    <p>如果是这样的话，就算是寻找攻略者也不奇怪。</p>
+    <p>如果做那样的事的话，就是立刻和吸血鬼和精灵敌对了，或许是他们认为没了迷宫的后果远比这要糟糕得多。</p>
+    <p>至少福格拉有做这个的理由。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">けど、妙なんだよね</span>”</p>
-    <p>“<span class="character">妙？</span>”</p>
-    <p>“うん、殺られたのはいずれも貴族。当然護衛だっていた。</p>
-    <p>なのに悉くその護衛に気付かれず……あるいは護衛を無力化して仕留めている。</p>
-    <p>間違いなく凄腕の暗殺者の仕業のはずなんだけど……”</p>
-    <p>“<span class="character">それだけの腕がありながら、不用意にも目撃されている</span>”</p>
-    <p>“うん……発見される事なく対象を仕留める事が出来るほどの凄腕なのに、帰りだけ目撃されるなんておかし</p>い<p>じゃん。しかも目撃者の口封じも何もしていない。</p>
-    <p>これじゃまるで素人だよ”</p>
+    <p>“<span class="character">但是，很奇怪呢。</span>”</p>
+    <p>“<span class="character">奇怪？</span>”</p>
+    <p>“<span class="character">嗯，被杀的都是有着护卫的贵族。</span></p>
+    <p><span class="character">但是护卫却几乎没有注意到那个……或者是将护卫无力化并被杀。</span></p>
+    <p><span class="character">毫无疑问应该是精明强干的暗杀者干的……</span>”</p>
+    <p>“<span class="character">虽然有那么多的手腕，但也有不小心被目击到</span>”</p>
+    <p>“<span class="character">嗯……明明有着不被发现就可以把对象收留的厉害本领，但是只被目击回来不是很奇怪吗？而且也没有封住目击者的嘴。</span></p>
+    <p><span class="character">这简直是个外行啊</span>”</p>
     <p></p>
     <p></p>
-    <p>　技量とやっている事があまりにチグハグすぎる。</p>
-    <p>　それがハンナの感じている違和感であった。</p>
-    <p>　この暗殺者は護衛に発見される事なく侵入し、拷問までしてのけている。</p>
-    <p>　それでいて事が終わるまで誰にも発見されていないという事は、誰にも気付かれずに侵入する隠密能力</p>と、音<p>を一切外に漏らさぬようにする能力……恐らくは風の魔法による音の遮断をやってのけるだけの技量が</p>ある事を
-    <p>意味している。</p>
-    <p>　そこまで出来て、何故帰りだけ発見される？　何故口封じもしない？</p>
-    <p>　これではまるで、わざと見付かっているようではないか。</p>
-    <p>　だが、そうだとするとますます意味が分からなくなる。</p>
-    <p>　わざと発見される事によるフォーゲラのメリットが全く見当たらないのだ。</p>
+    <p>功夫和所做的事情太悬空了。</p>
+    <p>那是汉娜感觉到的不协调感。</p>
+    <p>这个暗杀者没有被护卫发现就侵入了，甚至还有拷问的余裕。</p>
+    <p>尽管如此，在事情结束之前谁都没有发现这件事，意味着有着不被任何人发现就侵入的隐秘能力和不让声音泄漏到外面的能力……恐怕只有通过风的魔法来阻断声音的本领。</p>
+    <p>能做到那里，为什么只有回去才能被发现？为什么不封口？</p>
+    <p>这样岂不是故意被发现了吗。</p>
+    <p>但是，那样的话就越来越不明白意思了。</p>
+    <p>因为故意被发现，所以完全找不到福格拉能获得的好处。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">わざと目撃させた？</span>”</p>
-    <p>“状況的にはそう考えるしかないけど……理由が全く分からない。</p>
-    <p>これじゃ無駄にフォーゲラに怒りを集めただけだよ”</p>
+    <p>“<span class="character">故意被目击了吗？</span>”</p>
+    <p>“<span class="character">从状况来看，只能这么想……完全不知道理由。</span></p>
+    <p><span class="character">这样的话只是徒然地让福格拉承受两边的愤怒而已</span>”</p>
     <p></p>
     <p></p>
-    <p>　この暗殺がフォーゲラの仕業ならば、目撃される事は何よりも嫌うはずだ。</p>
-    <p>　ダンジョンのない状態でエルフェと吸血鬼の双方から睨まれるのは出来れば避けたいはずだし、目撃され</p>てい<p>なければ吸血鬼とエルフェは互いを疑い合って、上手くいけばそのまま潰し合いだってするかもしれな</p>い。
-    <p>　そうしない理由は何だ。わざと見付かる事で一体どんなメリットがあるというのか。</p>
-    <p>　ハンナにはそれが分からなかった。</p>
+    <p>如果这场暗杀是福格拉的所作所为的话，应该比什么都讨厌被目击。</p>
+    <p>在没有迷宫的状态下，精灵和吸血鬼双方都会尽量避免被盯上，如果没有被目击到的话，吸血鬼和精灵就会互相怀疑，如果进展顺利的话，也许就那样互相毁灭了。</p>
+    <p>不那样做的理由是什么。故意发现的事情到底有什么好处呢。</p>
+    <p>汉娜不明白那个。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">フォーゲラに化けた誰かの仕業という線は？</span>”</p>
-    <p>“<span class="character">それはないよ。少なくとも暗殺者はフォーゲラで間違いない</span>”</p>
+    <p>“<span class="character">某个人变身成福格拉的的可能性呢？</span>”</p>
+    <p>“<span class="character">那是没有的。至少暗杀者是福格拉没错。</span>”</p>
     <p></p>
     <p></p>
-    <p>　フォーゲラの仕業に見せたい誰かの変装、というのが現状では最も納得出来る説だ。</p>
-    <p>　フォーゲラに敵意を集めて得をするのはフォーゲラ以外の種族である。</p>
-    <p>　しかしそれは違うとハンナはハッキリ断言した。</p>
+    <p>现在最能接受的说法是想让别人看到福格拉的行为的变装。</p>
+    <p>聚集对福格拉敌意得到好处的是福格拉以外的种族。</p>
+    <p>但是汉娜清楚地断言那是不对的。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">何故言い切れる？</span>”</p>
-    <p>“実は殿下の所にも暗殺者が来たんだよ。こっちは何とか返り討ちにしたけどね。</p>
-    <p>……間違いなく賊はフォーゲラだった。私がこの目で確認してる”</p>
-    <p>“<span class="character">他の誰かに洗脳されている可能性は？</span>”</p>
-    <p>“<span class="character">それは今、うちの部下が尋問して調べてる</span>”</p>
+    <p>“<span class="character">为什么能断言？</span>”</p>
+    <p>“<span class="character">其实殿下那里也来了暗杀者。我也总算是还击了。</span></p>
+    <p><span class="character">……没错，贼就是福格拉。我亲眼确认的</span>”</p>
+    <p>“<span class="character">有被其他人洗脑的可能性吗？</span>”</p>
+    <p>“<span class="character">那件事现在我们的部下正在审问并调查。</span>”</p>
     <p></p>
     <p></p>
-    <p>　暗殺者が間違いなくフォーゲラである事は分かった。</p>
-    <p>　だがそうだとしても、そのフォーゲラが自らの意志で動いているかどうかまでは分からない。</p>
-    <p>　裏に誰かがいて、その誰かに操られている可能性もあり得るだろう。</p>
-    <p>　ともかく、ハンナの部下が尋問しているらしいので、その結果を待つしかない。</p>
+    <p>明白了暗杀者肯定是福格拉。</p>
+    <p>但是即使是这样，也不知道那个福格拉是否按照自己的意志行动。</p>
+    <p>背后有人，也有可能是被那个人操纵了吧。</p>
+    <p>总之，汉娜的部下好像在盘问，只能等结果了。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">おい！　中に入るな！　入るなと……おわああ！　こら、駄目だ！　駄目だって……この、犬！</span>”</p>
+    <p>“<span class="character">喂！别进去！别进来……哇啊啊啊啊啊啊！不行！不行啊……这只狗！</span>”</p>
     <p></p>
     <p></p>
-    <p>　話が終わりかけた所で、外から声が聞こえた。</p>
-    <p>　どうやら誰かが中に押し入ろうとしているようだ。</p>
-    <p>　ハンナの部下が止めようとしているが、なかなか手こずっているらしい。</p>
-    <p>　やがて招かれざる客はとうとうハンナの部下を蹴散らして、建物の中へ強引に突入してきた。</p>
+    <p>刚要说完，就从外面听到了声音。</p>
+    <p>好像有人要往里挤。</p>
+    <p>汉娜的部下想要阻止，但好像很棘手。</p>
+    <p>不久，不速之客终于将汉娜的部下踢散，强行闯入建筑物。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">ワォン！</span>”</p>
+    <p>“<span class="character">汪！</span>”</p>
     <p></p>
     <p></p>
-    <p>　――クロだった。</p>
-    <p>　首元や腰には止めようと必死にしがみついたハンナの部下がいるが、それを引き摺りながらクロはノシノ</p>シと<p>入って来てしまう。</p>
+    <p>——是小黑。</p>
+    <p>汉娜的部下拼命地紧紧抱住他的脖子和腰，但是小黑一边拉着他们，一边慢慢地走了进来。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">あー……離していいよ。そのワンちゃんは味方だから</span>”</p>
+    <p>“<span class="character">啊……放手吧。那只小狗是友方。</span>”</p>
     <p></p>
     <p></p>
-    <p>　ハンナに指示され、クロにしがみ付いていた男達が離れた。</p>
-    <p>　するとクロは一度メルセデスを見てから出口まで歩き、そこで止まってまたメルセデスを見る。</p>
-    <p>　どうやら付いてきて欲しいらしい。</p>
-    <p>　レスリーの護衛としてベンケイと一緒に残したはずのクロが来たという事は、外で何かがあったという事</p>だ。
-    <p>　メルセデスはハンナとアイコンタクトをし、すぐに外へ出て宿屋へ引き返した。</p>
-    <p>　すぐ後にはハンナも続いている。</p>
-    <p>　少し走って宿の前に戻ると、そこには人だかりが出来ていた。</p>
-    <p>　エルフェ、吸血鬼問わず何故か倒れており、彼等の前でベンケイが仁王立ちしている。</p>
+    <p>被汉娜指示，紧紧抱住小黑的男人们离开了。</p>
+    <p>然后小黑看了一次梅赛德斯之后走到出口，停在那里又看了梅赛德斯。</p>
+    <p>好像希望跟着。</p>
+    <p>本来应该和本凯一起作为莱斯利的护卫留下的小黑来了，这是因为外面发生了什么事情。</p>
+    <p>梅赛德斯和汉娜眼神交流后，马上出门返回了旅店。</p>
+    <p>之后汉娜也紧接着。</p>
+    <p>稍微跑回旅馆前，发现那里人山人海。</p>
+    <p>精灵和吸血鬼不知为何倒下，本凯如仁王一样站在他们面前。</p>
+    <p><span class="comment translator">仁王立ち 像金刚一样站立。用于形容威严地挺直站立、叉腿站立。</span></p>
     <p></p>
     <p></p>
-    <p>“<span class="character">ベンケイ、これは何が起こっている？</span>”</p>
-    <p>“<span class="character">この者達がレスリー殿に暗殺の疑いをかけ、連れ去ろうとしていたので阻みました</span>”</p>
-    <p>“<span class="character">レスリーに？</span>”</p>
+    <p>“<span class="character">本凯，这是发生什么事了？</span>”</p>
+    <p>“<span class="character">这些人怀疑莱斯利殿有暗杀的嫌疑，想带她走，所以阻止了。</span>”</p>
+    <p>“<span class="character">莱斯利？</span>”</p>
     <p></p>
     <p></p>
-    <p>　ベンケイから聞かされた内容にメルセデスは眉をひそめ、それから彼の後ろに隠れているレスリーを見</p>た。
-    <p>　レスリーは助けを求めるようにメルセデスを見ている。</p>
+    <p>梅赛德斯对从本凯那里听来的内容皱眉，然后看了隐藏在他背后的莱斯利。</p>
+    <p>莱斯利为了寻求帮助看着梅赛德斯。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">何だ、吸血鬼のくせにお前もそいつを庇うつもりか！？　なら腕ずくでも……</span>”</p>
+    <p>“<span class="character">什么嘛，明明是吸血鬼，你也打算保护他吗！？那就算是耍手腕也……</span>”</p>
     <p></p>
     <p></p>
-    <p>　メルセデスをレスリーの味方と判断したらしいエルフェが短刀を抜いて近付いて来たので、無言でその顔</p>面に<p>裏拳を叩き込んだ。</p>
-    <p>　派手な音と共にエルフェが血潮を撒き散らしながら吹き飛び、近くの建物に衝突して地面に転がる。</p>
-    <p>　顔は陥没しており、ビクビクと痙攣していて哀れなものだが、先に武器を抜く方が悪い。</p>
-    <p>　とはいえ、これで『腕ずくでも』は無理と一目で他の者にも伝わっただろう。</p>
-    <p>　周囲が沈黙したのを見計らい、メルセデスは先頭にいる別のエルフェに声をかけた。</p>
+    <p>似乎认为梅赛德斯是莱斯的伙伴的精灵拔出短刀接近了他，所以默默地在他的脸上打了里拳。</p>
+    <p>伴随着华丽的声音，精灵一边散布着鲜血一边狂吹，撞到附近的建筑物并滚到地面上。</p>
+    <p>脸陷了进去，痉挛得很可怜，但最好先把武器拔掉。</p>
+    <p>话虽如此，但这样一来，一眼就觉得“即使耍手腕也不行”，并传达给了其他人吧。</p>
+    <p>估计周围人沉默了，梅赛德斯向最前面的另一个精灵打了招呼。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">すまんが状況が分からん。説明を頼めるか？</span>”</p>
-    <p>“<span class="character">あ、ああ……</span>”</p>
+    <p>“<span class="character">不好意思，我还不知道状况。能拜托你说明一下吗？</span>”</p>
+    <p>“<span class="character">啊，好……</span>”</p>
     <p></p>
     <p></p>
-    <p>　説明を求められたエルフェは冷や汗を流しながらも頷いた。</p>
-    <p>　その顔は『分からないのに殴ったのかコイツ』みたいな表情をしているが、アレは武器を出した方に問題</p>があ<p>る。</p>
-    <p>　武器を出した時点でそれは相手に殺し合いを仕掛けたも同然だ。殴られても文句は言えない。</p>
+    <p>被要求说明的精灵流着冷汗点点头。</p>
+    <p>那张脸上的表情就像是“明明不知道是不是打了那家伙”，但是那个拿武器的人有问题。</p>
+    <p>拿出武器的时候就等于是在对对方进行杀戮。挨打了也不可能发牢骚。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">昨日、吸血鬼とエルフェ双方が何者かに暗殺されたのは知っているな？</span>”</p>
-    <p>“<span class="character">ああ。だがそれはフォーゲラの仕業だろう？</span>”</p>
-    <p>“<span class="character">それなんだがな、殺されたうちの一人……グラシアンって奴はそこにいるレスリーと険悪な仲でな……昨日は</p>決<p>闘までして、脚を撃たれている</span>”</p>
+    <p>“<span class="character">你知道昨天吸血鬼和精灵双方都被什么人暗杀了吗？</span>”</p>
+    <p>“<span class="character">啊。但是那是福格拉干的好事吧？</span>”</p>
+    <p>“<span class="character">虽然是这样，但是被杀的其中一个人……格拉西恩那家伙和在那里的莱斯利关系很险恶……昨天甚至决斗，脚都被射击了。</span>”</p>
     <p></p>
     <p></p>
-    <p>　グラシアンの死。それを聞かされ、レスリーは驚いたような声をあげた。</p>
-    <p>　メルセデスも多少驚きはしたが、残念ながらどうでもいい相手としか認識していなかったので、表情には</p>出さ<p>ない。</p>
+    <p>格拉西兰的死。听到这句话，莱斯利发出了惊讶的声音。</p>
+    <p>梅赛德斯也多少有些吃惊，但遗憾的是，她只认识到他是个无所谓的人，所以不会表现在表情上。</p>
     <p></p>
     <p></p>
-    <p>“それも知っている。だが尋常な決闘で撃たれて文句を言うのはお門違いだ。</p>
-    <p>仮にその時の傷が原因で死んだのだとしても、それでレスリーが責められる謂れはない”</p>
-    <p>“<span class="character">そりゃそうだ。だが敗者に鞭を打ってわざわざ止めを刺しに行くのは別だろ？</span>”</p>
-    <p>“<span class="character">レスリーがそれをやったと？</span>”</p>
-    <p>“<span class="character">現場にこれが落ちていたんだ</span>”</p>
+    <p>“<span class="character">我也知道。但是，在普通的决斗中被枪击而发牢骚是不对的。</span></p>
+    <p><span class="character">即使是因为当时的伤口而死亡，也没有理由因此而被指责莱斯利</span>”</p>
+    <p>“<span class="character">那是当然的。但是鞭打失败者特地去扎手是不一样的吧？</span>”</p>
+    <p>“<span class="character">听说莱斯利做了那个？</span>”</p>
+    <p>“<span class="character">这个掉在了现场</span>”</p>
     <p></p>
     <p></p>
-    <p>　ただ前日に決闘をしていたからといって、それでレスリーを暗殺の犯人と見なすのは無理矢理すぎる。</p>
-    <p>　しかしどうやら彼等の中ではレスリーを疑う根拠があるらしい。</p>
+    <p>虽说只是前一天决斗，但将莱斯利当作暗杀犯人也太勉强了。</p>
+    <p>但是他们似乎有怀疑莱斯利的根据。</p>
     <p></p>
-    <p></p>
-    <p>　その根拠として提示されたのは――テントと共に燃えたとばかり思っていた、レスリーが大事にしていた例</p>の<p>本であった。</p>
-    <p>５/１０に“欠けた月のメルセデス”の第一巻が発売となります。</p>
-    <p>書店で見かけましたら是非、手に取ってみて下さい。</p>
+    <p>作为证据被提示的是——本以为是和帐篷一起燃烧的，莱斯利很重视的那本书。</p>
+    <p class="divline"></p>
+    <p>5月10日“残月的梅赛德斯”的第一卷发售。</p>
+    <p>如果在书店看到的话，请一定要入手看看。</p>
+    <p><span class="comment translator">这话是2021-05-02发的</span></p>
 </body>
 
 </html>
